# 2025_term_up_autumn_Computer_vision_lecture_at_jlu

./: LICENSE  README.md  fast.py  reqs.bat  reqs.txt  setup.py
abm/: test.py
abm/cpp_hello/src/: main.cpp
abm/fastcpp/: CMakeLists.txt
abm/fastcpp/src/: fast.cpp
abm/helloc/: CMakeLists.txt  pyproject.toml
abm/helloc/hellocuda/: __init__.py  _fastnn.pyi  _fasttorch.pyi  layers.py
abm/helloc/include/: dense.cuh  kernels.cuh  kernels.cuh.txt  layers.h  tensor.cuh
abm/helloc/include/perco/core/: tensor.h  tensor.h.txt
abm/helloc/src/: dense.cpp  dense.cu  einsum.cpp  fasttorch.cpp  helloc.cpp  helloc.cpp.txt  kernels.cu  kernels.cu.txt  kernels.cuh  kernels.cuh.txt  ops.cu  testeinsum.cpp  testtensor.cpp  testtensor.cpp.txt  vadd.cpp  vadd.cpp.txt
abm/hellocuda/: CMakeLists.txt  reqs.txt
abm/hellocuda/hellocuda/: __init__.py  hellocuda.pyi
abm/hellocuda/src/: bindings.cpp  kernels.cu
abm/hellocuda/yourpkg/: __init__.py
cpp_hello/: CMakeLists.txt
fast-contest/: contest.py
fast-ctypes_msvc_cl/: doc.md  fast.c
fast-cuda_python/: fastcuda_nvrtc.py  reqs.txt  tes.py
fast-cython/: fastTest.py  fastmodule.c
fast-nvcc_in_pip/: doc.md  fastCudaTest.py  fastcuda.cu  fastgpu.exp  fastgpu.lib  reqs.bat  reqs.txt  setup.py
fastcpp/: pyproject.toml
fasts/fast-ctypes_msvc_cl/: fastTest.py
fasts/fast-cuda_python/: fastcuda.cu  reqs.bat
fasts/fast-cython/: doc.md  fast.c
fasts/fast-nvcc_in_pip/: fastcuda.cu
helloc/: reqs.bat  reqs.txt
helloc/src/: bindings.cpp  hello.cu
