[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "fastcpp"
version = "0.1.0"
description = "Tiny C++ speedup demo (pybind11 + CMake)"
requires-python = ">=3.9"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.verbose = true
